Fix overflow-x

--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ html {
     background: #eee;
     scroll-padding-top: 5rem;
     margin: 0px;
+    overflow-x: hidden;
+}
+
+body {
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -38,7 +43,7 @@ html {
     flex-grow: 1;
     display: flex;
     align-items: center;
-    margin: 0px 50px;
+    margin: 0px 3.5%;
     font-family: 'Share Tech Mono', monospace;
 }
 
